Api Servlet Action framework now support JSON Buddy Pojo-mapping